# srs_bjam5

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  notes.txt  wasm-build.sh
.github/workflows/: release.yaml
assets/: assets.caf.json  constants.caf.json  manifest.caf.json  mob_data.caf.json  spawn_schedule.caf.json  ui.caf.json
assets/power_ups/: filler.caf.json  manifest.caf.json  passives.caf.json
assets/power_ups/beer_can/: manifest.caf.json
assets/power_ups/car_battery/: manifest.caf.json
assets/power_ups/large_tire/: manifest.caf.json
assets/power_ups/nail_gun/: manifest.caf.json
assets/spawn_schedule/: day1.caf.json  day2.caf.json  day3.caf.json  day4.caf.json  day5.caf.json  manifest.caf.json
assets/ui/: day_result.caf.json  day_start.caf.json  game_hud.caf.json  manifest.caf.json  power_up.caf.json  settings.caf.json
src/: controls.rs  dev.rs  events.rs  game_constants.rs  main.rs  plugin.rs  run_app.rs  settings.rs  ui.rs
src/assets/: plugin.rs  sprite_animations.rs
src/day_start/: mod.rs  plugin.rs  settings.rs  ui.rs
src/game/: animations.rs  attraction.rs  audio.rs  billboard_cache.rs  camera.rs  collectables.rs  components.rs  damage.rs  day_end.rs  drops.rs  effect.rs  game_clock.rs  intersections.rs  light.rs  map.rs  mob.rs  mod.rs  pet.rs  player.rs  plugin.rs  power_up.rs  projectiles.rs  setup.rs  spawning.rs  sprite_layers.rs  stats.rs  ui.rs
src/game/power_up/: filler.rs  mod.rs  passives.rs  (+4 more)
src/meta/: audio.rs  day.rs  karma.rs  mod.rs  plugin.rs
src/mod_picking_ext/: interaction_ext.rs  mod.rs
src/utils/: game_rng.rs  math.rs  mod.rs  plugin.rs  states_ext.rs
wasm/: index.html
(+10 files in other folders)
