[package]
name = "srs_bjam5"
description = "Bevy Jam 5 (by SnowyRoadStudios)."
authors = ["koe <ukoe@protonmail.com>"]
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/UkoeHB/srs_bjam5"

[[bin]]
name = "srs_bjam5"
test = false
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

dev = ["bevy_cobweb_ui/dev", "bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.14", default-features = true, features = ["mp3"] }
bevy_cobweb = { version = "0.10" }
bevy_cobweb_ui = { rev = "8445ab5", git = "https://github.com/UkoeHB/bevy_cobweb_ui" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", default-features = true, features = ["atlas"]}
bevy_mod_picking = { version = "0.20", features = [ "backend_sprite" ] }
bevy_spritesheet_animation = { version = "0.2" }
extol_sprite_layer = { rev = "6093ce9", git = "https://github.com/UkoeHB/extol_sprite_layer" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
serde = { version = "1.0" }
tracing = { version = "0.1" }
wasm-timer = { version = "0.2" }

# Profile for WASM release builds only.
[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Profile for non-WASM release (fast compile)
[profile.release-small]
inherits = "dev"
opt-level = "s"
codegen-units = 1
strip = true

# Profile for non-WASM release (slow compile)
[profile.dist]
inherits = "release-small"
lto = "fat"
